### Initialize Autoconf
AC_PREREQ([2.65])
AC_INIT([test-nanosleep-for-octave], [0.1.0], [https://github.com/apjanke/test-nanosleep-for-octave/issues], [test-nanosleep-for-octave],
        [https://www.gnu.org/software/octave/])



AC_PROG_CXX
AC_PROG_CC

gl_EARLY

gl_INIT

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile lib/Makefile])

AM_INIT_AUTOMAKE([1.14 subdir-objects -Wno-portability -Wno-override])

AC_OUTPUT
